# tir-engine

./: Cargo.toml  README.md  default.env  roadmap.yml
src/: configuration.rs  lib.rs  structs.rs
src/openai/: client.rs  error.rs  mod.rs
