[package]
name = "tir-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
dotenv = "0.15.0"
serde_yaml = "0.9.24"
serde = { version = "1.0.171", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }
regex = "1"
thiserror = "1.0.44"

[lib]
name = "tirengine"
path = "src/lib.rs"

[[bin]]
name = "tir-engine"
path = "src/bin.rs"
